[package]
name = "cst816s"
version = "0.1.4"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "CST816S touchscreen driver for embedded hal / no_std"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/cst816s"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "CST816S",
    "touchscreen",
    "PineTime"
]
readme = "README.md"

[dependencies]
cortex-m = "0.7"
embedded-hal = "0.2.3"

[dev-dependencies]
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
nrf52832-hal = { version = "0.16", default-features = false, features = ["xxAA-package", "rt"] }
panic-halt = "0.2.0"
st7789 = "0.7"
display-interface = "0.5"
display-interface-spi = "0.5"
shared-bus = {version = "0.3", features = ["cortex-m"] }
embedded-graphics = "0.8"
